<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin" >

        <ImageView
            android:id="@+id/img_profilepic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/lblDisplayAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_enroll_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:textColor="#757575" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/address"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_enroll_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:textColor="#757575" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Choose the type of TB"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_TBType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:entries="@array/types_of_TB"
            android:prompt="@string/choose_TB" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Prescription"
                android:textColor="#000000"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/img_prescription"
                android:layout_width="150dp"
                android:layout_height="100dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_takePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00838F"
                android:text="@string/attach_prescription"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_enroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00838F"
                android:text="@string/enroll"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>